# MYTHESIS

./: .gitignore  compile.sh  main.py  main.tex  pyproject.toml  refs.bib
experiments/: env.py
experiments/proton_density/: correction_application.py  export_as_nifti.py  linear_model.py  sanity_mask.py
src/: utils.py
