[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mythesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydicom>=3.0.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
